--- a/src/1-css/text/_text-styles.scss
+++ b/src/1-css/text/_text-styles.scss
@@ -81,7 +81,7 @@ $font-weight: (
 
 // set size
 $font-size: (
-  1: clamp(3rem, 3rem + 1.5vw, 5rem),
+  1: clamp(3rem, 3rem + 1.5vw, 4rem),
   2: clamp(2.25rem, 2.25rem + 1.5vw, 3.5rem),
   3: clamp(1.75rem, 1.75rem + 1.5vw, 2.5rem),
   4: clamp(1.3rem, 1.3rem + 1.5vw, 1.75rem),
@@ -95,6 +95,7 @@ $font-size: (
     line-height: 125%;
     margin-left: -0.2rem;
     filter: saturate(2);
+    transition: font-size 50ms ease-in-out;
   }
   h#{$level}::selection {
     background: rgb-var(accent, 50);
